deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
  namespace: ipearev-streamlit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
      - name: streamlit
        image: __IMAGE__
        ports:
        - containerPort: 8501
      imagePullSecrets:
        - name: registry-gitlab-ipearev
