service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipearev
  labels:
    app.kubernetes.io/name: ipearev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: ipearev
  type: ClusterIP
