ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipearev
  labels:
    app.kubernetes.io/name: ipearev
spec:
  ingressClassName: nginx
  rules:
    - host: __INGRESS_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipearev
                port:
                  name: http
  tls:
    - hosts:
        - __INGRESS_HOST__
      secretName: __TLS_SECRET__
